finished adaptive layout

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 сделать общение более интересным! Доступны только настоящие и активные профили в ленте
                             </p>
 
-                            <div class="cases__item__description__buttons">
+                            <div class="cases__item__description__buttons cases__item__description__buttons--one">
 
                                 <div class="cases__item__description__buttons__iphone">
                                     <img src="./assets/img/iphone.svg" alt="iphone">
@@ -272,7 +272,7 @@
                                 <h5 class="cases__item__slider__description__title">Лекторий <br> «Прямая речь»</h5>
                                 <p class="cases__item__slider__description__text">Признанный лидер </p>
                             </div>
-                            <div class="cases__item__slider__img">
+                            <div class="cases__item__slider__img cases__item__slider__img--right">
                                 <img src="./assets/img/case_1.png" alt="case_1">
                             </div>
                         </div>
@@ -395,11 +395,11 @@
                     <div class="works__item">
                         <div class="works__item__description">
                             <h2 class="works__item__description__title">Web разработка</h2>
-                            <div class="works__item__description__types">
-                                <button class="works__item__description__types__button">Сайты</button>  
-                                <button class="works__item__description__types__button"> Магазины</button>
-                                <button class="works__item__description__types__button">Лендинги</button>
-                                <button class="works__item__description__types__button">Сервисы</button>
+                            <div class="works__item__description__types works__item__description__types--web">
+                                <button class="works__item__description__types__button works__item__description__types__button--web">Сайты</button>  
+                                <button class="works__item__description__types__button works__item__description__types__button--web"> Магазины</button>
+                                <button class="works__item__description__types__button works__item__description__types__button--web">Лендинги</button>
+                                <button class="works__item__description__types__button works__item__description__types__button--web">Сервисы</button>
                             </div>
                             <p class="works__item__description__text">
                                 Команда наших специалистов создает функционально сложные, интеграционные и высоконагруженные проекты.
@@ -408,7 +408,7 @@
                             <a href="#" class="works__item__description__link">Получить оценку</a>
                         </div>
 
-                        <div class="works__item__circle">
+                        <div class="works__item__circle works__item__circle--web">
                             <div class="works__item__circle__cube works__item__circle__cube--computer"></div>
                             <div class="works__item__circle__computer"></div>
                         </div>
